@@ -207,7 +207,7 @@ set announce(THEMEFILE) "themes/default.zst"
 # Announce types, "SECTION" types are path oriented (COMPLETE: /site/MP3/...),
 # and "REGULAR" types are regular event based announces.
 set msgtypes(SECTION)   "IMDB IMDBVAR PRE NEWDIR DELDIR NUKE UNNUKE WIPE WIPE-r BAD_FILE_0SIZE BAD_FILE_BITRATE BAD_FILE_CRC BAD_FILE_DISALLOWED BAD_FILE_DUPENFO BAD_FILE_GENRE BAD_FILE_NOSFV BAD_FILE_SFV BAD_FILE_WRONGDIR BAD_FILE_YEAR BAD_FILE_ZIP BADBITRATE BADGENRE BADYEAR COMPLETE_AUDIO_CBR COMPLETE_AUDIO_VBR COMPLETE_OTHER COMPLETE_RAR COMPLETE_VIDEO COMPLETE_ZIP COMPLETE_RACE_AUDIO_CBR COMPLETE_RACE_AUDIO_VBR COMPLETE_RACE_OTHER COMPLETE_RACE_RAR COMPLETE_RACE_VIDEO COMPLETE_RACE_ZIP DOUBLESFV HALFWAY_AUDIO HALFWAY_OTHER HALFWAY_RAR HALFWAY_VIDEO HALFWAY_ZIP HALFWAY_RACE_AUDIO HALFWAY_RACE_OTHER HALFWAY_RACE_RAR HALFWAY_RACE_VIDEO HALFWAY_RACE_ZIP INCOMPLETE NEWLEADER_AUDIO NEWLEADER_OTHER NEWLEADER_RAR NEWLEADER_VIDEO NEWLEADER_ZIP RACE_AUDIO RACE_OTHER RACE_RAR RACE_VIDEO RACE_ZIP SFV_AUDIO SFV_OTHER SFV_RAR SFV_VIDEO UPDATE_CBR UPDATE_OTHER UPDATE_RAR UPDATE_VBR UPDATE_VIDEO UPDATE_ZIP"
-set msgtypes(DEFAULT)   "ADDUSER GADDUSER CHGRPADD CHGRPDEL ADDIP DELIP READDED DELUSER PURGED KILLED SYSOP BADHOSTMASK BADMSGINVITE BADPASSWORD BANNEDHOST DELETED LOGIN LOGOUT IPNOTADDED KILLGHOST TAGLINE TIMEOUT DEBUG IMDBFIND INVITE MSGINVITE REQFILLED REQUEST TURGEN"
+set msgtypes(DEFAULT)   "ADDUSER GADDUSER CHGRPADD CHGRPDEL ADDIP DELIP READDED DELUSER PURGED KILLED SYSOP BADHOSTMASK BADMSGINVITE BADPASSWORD BANNEDHOST DELETED LOGIN LOGOUT IPNOTADDED KILLGHOST TAGLINE TIMEOUT DEBUG IMDBFIND INVITE MSGINVITE REQFILLED REQUEST TURGEN SPEEDTEST"
 
 # Redirect events to the defined channels.
 #set redirect(LOGIN)    "#pzs-ng #ng-staff"
@@ -348,6 +348,7 @@ set disable(UPDATE_RAR)                     0
 set disable(UPDATE_VBR)                     0
 set disable(UPDATE_VIDEO)                   0
 set disable(UPDATE_ZIP)                     0
+set disable(SPEEDTEST)                      0
 
 #########################################################
 # ADVANCED CONFIG, EDIT CAREFULLY                       #
