@@ -139,6 +139,7 @@ set variables(UPDATE_RAR)                   "%pf %u_name %g_name %t_files %u_spe
 set variables(UPDATE_VBR)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %genre %year %bitrate %sampling %mode %audio %a_stream %a_version %artist %album %title %codec %layer %t_timeleft"
 set variables(UPDATE_VIDEO)                 "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
 set variables(UPDATE_ZIP)                   "%pf %u_name %g_name %t_files %u_speed %t_mbytes %filename %releasename %u_tagline %t_timeleft"
+set variables(SPEEDTEST)                    "%pf %u_name %g_name %u_tagline %u_speed %t_mbytes"
 
 ## Converts empty or zero variable to something else if defined
 #
