@@ -116,24 +116,24 @@ announce.NEWLEADER_OTHER_LOOP1			= "%b{%a_name}@%a_gname%splitter"
 announce.NEWLEADER_VIDEO_LOOP1			= "%b{%a_name}@%a_gname%splitter"
 announce.NEWLEADER_AUDIO_LOOP1			= "%b{%a_name}@%a_gname%splitter"
 
-announce.COMPLETE_STAT_RACE_RAR_LOOP1		= "%b{%r_name}@%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_RAR_LOOP2		= "Not Used"
-announce.COMPLETE_STAT_RACE_RAR_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
-announce.COMPLETE_STAT_RACE_ZIP_LOOP1		= "%b{%r_name}/%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_ZIP_LOOP2		= "Not Used"
-announce.COMPLETE_STAT_RACE_ZIP_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
-announce.COMPLETE_STAT_RACE_OTHER_LOOP1		= "%b{%r_name}/%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_OTHER_LOOP2		= "Not Used"
-announce.COMPLETE_STAT_RACE_OTHER_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
-announce.COMPLETE_STAT_RACE_VIDEO_LOOP1		= "%b{%r_name}/%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_VIDEO_LOOP2		= "Not Used"
-announce.COMPLETE_STAT_RACE_VIDEO_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
-announce.COMPLETE_STAT_RACE_AUDIO_CBR_LOOP1	= "%b{%r_name}/%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_AUDIO_CBR_LOOP2	= "Not Used"
-announce.COMPLETE_STAT_RACE_AUDIO_CBR_LOOP3	= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
-announce.COMPLETE_STAT_RACE_AUDIO_VBR_LOOP1	= "%b{%r_name}/%r_gname%splitter"
-announce.COMPLETE_STAT_RACE_AUDIO_VBR_LOOP2	= "Not Used"
-announce.COMPLETE_STAT_RACE_AUDIO_VBR_LOOP3	= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_RAR_LOOP1		= "%b{%r_name}@%r_gname%splitter"
+announce.COMPLETE_RACE_RAR_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_RAR_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_ZIP_LOOP1		= "%b{%r_name}/%r_gname%splitter"
+announce.COMPLETE_RACE_ZIP_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_ZIP_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_OTHER_LOOP1		= "%b{%r_name}/%r_gname%splitter"
+announce.COMPLETE_RACE_OTHER_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_OTHER_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_VIDEO_LOOP1		= "%b{%r_name}/%r_gname%splitter"
+announce.COMPLETE_RACE_VIDEO_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_VIDEO_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_AUDIO_CBR_LOOP1		= "%b{%r_name}/%r_gname%splitter"
+announce.COMPLETE_RACE_AUDIO_CBR_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_AUDIO_CBR_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
+announce.COMPLETE_RACE_AUDIO_VBR_LOOP1		= "%b{%r_name}/%r_gname%splitter"
+announce.COMPLETE_RACE_AUDIO_VBR_LOOP2		= "Not Used"
+announce.COMPLETE_RACE_AUDIO_VBR_LOOP3		= "%b{%u_racer_name}@%g_racer_name [%b{%u_racer_files}f/%u_racer_mbytesMB@%u_racer_avgspeed]%splitter"
 
 ## Standard zipscript announcements
 announce.RACE_ZIP				= "[%b{RACE  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_name}@%g_name (%u_speed) is racing %loop1. Estimated time left of race is %b{%t_timeleft}."
@@ -154,11 +154,11 @@ announce.UPDATE_VIDEO				= "[%b{FIRST }]:[%c3{%l8{%section}}] %b{%relname} - %b{
 announce.UPDATE_CBR				= "[%b{FIRST }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_name}@%g_name (%u_speed) uploaded first file - expecting %b{%t_files}f of %b{%genre} from %b{%year} at %b{%sampling}Hz in %mode %b{%bitrate}kbps (%audio). Expecting race to be finished in %b{%t_timeleft}."
 announce.UPDATE_VBR				= "[%b{FIRST }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_name}@%g_name (%u_speed) uploaded first file - expecting %b{%t_files}f of %b{%genre} from %b{%year} at %b{%sampling}Hz in %mode %b{%bitrate}kbps (%audio %a_stream). Expecting race to be finished in %b{%t_timeleft}."
 
-announce.HALFWAY_NORACE_RAR			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
-announce.HALFWAY_NORACE_ZIP			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
-announce.HALFWAY_NORACE_OTHER			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
-announce.HALFWAY_NORACE_VIDEO			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
-announce.HALFWAY_NORACE_AUDIO			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
+announce.HALFWAY_RAR				= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
+announce.HALFWAY_ZIP				= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
+announce.HALFWAY_OTHER				= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
+announce.HALFWAY_VIDEO				= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
+announce.HALFWAY_AUDIO				= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed)is halfway done. . . %b{ALONE!} Estimated time left is %b{%t_timeleft}."
 
 announce.HALFWAY_RACE_RAR			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%relname} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed, %b{%u_leader_files}f/%u_leader_mbytesMB) leads against %loop1. Estimated time left of race is %b{%t_timeleft}."
 announce.HALFWAY_RACE_ZIP			= "[%b{HALF  }]:[%c3{%l8{%section}}] %b{%reldir} - %b{%u_leader_name}@%u_leader_gname (%u_leader_avgspeed, %b{%u_leader_files}f/%u_leader_mbytesMB) leads against %loop1. Estimated time left of race is %b{%t_timeleft}."
@@ -179,12 +179,15 @@ announce.COMPLETE_VIDEO				= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b
 announce.COMPLETE_AUDIO_CBR			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%r_avgspeed) completed by %b{%u_name}/%g_name in %b{%t_duration}."
 announce.COMPLETE_AUDIO_VBR			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%r_avgspeed) completed by %b{%u_name}/%g_name in %b{%t_duration}."
 
-announce.COMPLETE_STAT_RACE_RAR			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
-announce.COMPLETE_STAT_RACE_ZIP			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
-announce.COMPLETE_STAT_RACE_OTHER		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
-announce.COMPLETE_STAT_RACE_VIDEO		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
-announce.COMPLETE_STAT_RACE_AUDIO_CBR		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
-announce.COMPLETE_STAT_RACE_AUDIO_VBR		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_RAR			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_ZIP			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_OTHER			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_VIDEO			= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%relname} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_AUDIO_CBR		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+announce.COMPLETE_RACE_AUDIO_VBR		= "[%b{DONE  }]:[%c3{%l8{%section}}] %b{%reldir} (%b{%t_files}f/%b{%t_mbytes}MB@%t_avgspeed) completed in %b{%t_duration} by %loop3."
+
+## speedtest announce
+announce.SPEEDTEST				= "[%b{SPEEDTEST}] %b{%u_name}@%g_name uploaded a file of %t_mbytesMB @ %u_speed."
 
 ## Postdel announce
 announce.INCOMPLETE				= "[%b{%c1{DEL}   }]:[%c3{%l8{%section}}] %b{%releasename} is now incomplete thanks to %b{%u_name}@%g_name."
