@@ -16,6 +16,7 @@
 #define zip_dirs			"/site/incoming/0day/"
 #define sfv_dirs			"/site/test/ /site/incoming/mp3/ /site/incoming/games/ /site/incoming/apps/ /site/incoming/musicvideos/ /site/incoming/requests/"
 #define nocheck_dirs			"/site/private/"
+#define speedtest_dirs			"/site/speedtest/"
 #define noforce_sfv_first_dirs		"/site/incoming/requests/"
 #define audio_nocheck_dirs		"/site/groups/ /site/incoming/requests/"
 #define allowed_types_exemption_dirs	"/site/incoming/musicvideos/"
