@@ -74,6 +74,9 @@
 #ifndef nocheck_dirs
 #define nocheck_dirs			"/site/private/"
 #endif
+#ifndef speedtest_dirs
+#define speedtest_dirs			"/site/speedtest/"
+#endif
 #ifndef noforce_sfv_first_dirs
 #define noforce_sfv_first_dirs		"/site/incoming/requests/"
 #endif
@@ -978,6 +981,10 @@
 #endif
 #ifndef disable_zip_norace_complete
 #define disable_zip_norace_complete	FALSE
+#endif
+
+#ifndef disable_speed_announce
+#define disable_speed_announce		FALSE
 #endif
 
 #ifndef charbar_missing
