@@ -12,6 +12,7 @@ v1.xx	:
 	  zipscript: new: the cleanup binary got a command line override for days back to cleanup
 	  zipscript: new: tagline for each racer added to the (bot) output
 	  zipscript: new: added support for execution of external script on banned releases.
+	  zipscript: new: added support for speedtests
 
 v1.00	: Initial release
 
